<resources>
    <string name="app_name">LabInventory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect_reader_menu_item_text">Connect Reader</string>
    <string name="change_reader_menu_item_text">Change Reader</string>
    <string name="disconnect_reader_menu_item_text">Disconnect Reader</string>
    <string name="low_power">Low Power</string>
    <string name="high_power">High Power</string>
    <string name="clear_list">Clear</string>
    <string name="inventory">Inventory</string>
    <string name="tag_finder">Tag Finder</string>
    <string name="tag_action">Tag Action</string>
    <string name="settings">Settings</string>
    <string name="inventory_hint">Hold trigger to scan for tags.</string>
    <string name="filters">Filters:</string>
    <string name="kill_tag">Kill Tag</string>
    <string name="tag_hex_value">---Tag hex value---</string>
    <string name="tag_owner_value">---Tag owner value---</string>
    <string name="tag_cell_type_value">---Tag cell type value---</string>
    <string name="tag_media_value">---Tag media value---</string>
    <string name="tag_ascii_value">---Tag ascii value---</string>
    <string name="tag_year_value">---Tag year value---</string>
    <string name="tag_created_value">---Tag created value---</string>
    <string name="tag_last_feeding_value">---Tag last feeding value---</string>
    <string name="tag_last_washing_value">---Tag last washing value---</string>
    <string name="tag_notes_value">---Tag notes value---</string>
    <string name="tag_treatment_start_value">---Tag treatment start value---</string>
    <string name="tag_wash_schedule_value">---Tag wash schedule value---</string>
    <string name="tag_feed_schedule_value">---Tag feed schedule value---</string>
    <string name="tag_antibiotics_value">---Tag antibiotics value---</string>
    <string name="tag_media_supl_value">---Tag media supl. value---</string>
    <string name="tag_support_quantity_value">---Tag support quan. value---</string>
    <string name="tag_location_value">---Tag location value---</string>
    <string name="tag_status_value">---Tag status value---</string>
    <string name="tag_number_value_in_batch">Tag number ---value--- in batch.</string>
    <string name="tag_surface_value">---Tag surface value---</string>
    <string name="tag_cell_passage_value">---Tag cell passage value---</string>
    <string name="tag_cell_subtype_value">---Tag cell subtype value---</string>
    <string name="tap_to_show_fields">Tap to show fields</string>
    <string name="tap_to_hide_fields">Tap to hide fields</string>
    <string name="invalid_ip_port_address">Invalid IP:Port Address!</string>
    <string name="unknown">Unknown</string>
    <string name="tag_clone_value">---Tag clone value---</string>
    <string name="tag_resistance_value">---Tag resistance value---</string>
    <string name="tag_gene2_value">---Tag gene2 value---</string>
    <string name="tag_gene1_value">---Tag gene1 value---</string>
    <string name="tag_genemod_value">---Tag genemod value---</string>
    <string name="tag_dist2_value">---Tag dist2 value---</string>
    <string name="tag_dist1_value">---Tag dist1 value---</string>
    <string name="tag_genotype_value">---Tag genotype value---</string>
    <string name="tag_well_count">---tag well count---</string>
    <string name="api_queue_warning">The API cannot be reached right now, please connect to the network before you can continue!</string>
    <string name="request_target">Request Target(s):</string>
    <string name="request_type">Request Type: </string>
    <string name="request_time">Request Time: </string>
    <string name="result">Result:</string>
    <string name="tag_parent_cells_value">---tag parent cells value---</string>
    <string name="tag_name_value">---tag name value---</string>
    <string name="tag_vector_resistance">---tag vector resistance---</string>
    <string name="tag_primary_resistance">---tag primary resistance---</string>
    <string name="tag_specific_location_value">---tag specific location value---</string>
    <string name="tag_frozen_on_value">---tag frozen on value---</string>
    <string name="tag_primer_value">---tag primer value---</string>
    <string name="tag_parental_plasmid_value">---tag parental plasmid value---</string>
    <string name="tag_strain_value">---tag strain value---</string>
    <string name="tag_other_genemod_value">---tag other genemod value---</string>
    <string name="tag_other_type_value">--tag other type value---</string>
    <string name="well_count">Well Count:</string>
    <string name="cell_count">Cell Count:</string>
    <string name="tag_source_value">---tag source value---</string>
    <string name="tag_vial_count_value">---tag vial count value---</string>
    <string name="tag_mucus_quantity_value">---tag mucus quantity value---</string>
    <string name="tag_mucus_concentration_value">---tag mucus concentration value---</string>
    <string name="tag_harvest_date_value">---tag harvest date value---</string>
    <string name="failedLookupWarning">The scanned tag could not be found, if you are connected to the network it has likely been killed already!</string>
    <string name="write_instructions_1">To start scan the QR code of the item you want by double pulling the trigger. This is what you want the new tag to appear as.</string>
    <string name="rfid_scan_tag">RFID scan tag</string>
    <string name="scan_item_qr_code">Scan item QR code</string>
    <string name="write_instructions_2">Next you need to scan the tag you want to overwrite with the RFID by holding the trigger. It will try to select the closest tag but you can tap on it and go to Tag Finder to verify you are targeting the correct tag.</string>
    <string name="write_instructions_3">Next you need to scan the QR code of the item you want by double pulling the trigger. This is what you want the new tag to appear as.</string>
    <string name="write_instructions_4">Now that you have both simply tap \'Write\' at the bottom while pointing the reader at the tag to overwrite. A popup will show success or failure.</string>
</resources>