<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InventoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:weightSum="3">
            <TextView
                android:id="@+id/locationText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="Location: -Scan to find location-"
                android:textAlignment="center"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTags"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_first"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/tagCount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="---"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="50sp"
                app:autoSizeStepGranularity="2sp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Tags"
                    android:textSize="20sp"
                    android:gravity="bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text=" seen"
                    android:textSize="20sp"
                    android:gravity="top"/>

            </LinearLayout>

            <ToggleButton
                android:id="@+id/togglePowerLevel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:layout_weight="1.5"
                android:textOff="@string/high_power"
                android:textOn="@string/low_power"
                android:backgroundTint="@color/carolinaBlue"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:weightSum="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sendBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:text="Send"
                android:textSize="24sp"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".4"/>

            <Button
                android:id="@+id/clearInv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:text="@string/clear_list"
                android:textSize="24sp"
                android:backgroundTint="@color/warning"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>